crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF066_RUF066.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF066 `MyClass` imported from `foo.bar` is not a module
  --> RUF066.py:15:21
   |
13 | # ============================================================================
14 |
15 | from foo.bar import MyClass  # RUF066
   |                     ^^^^^^^
16 | from foo.bar import my_function  # RUF066
17 | from foo.baz.qux import SomeClass  # RUF066
   |

RUF066 `my_function` imported from `foo.bar` is not a module
  --> RUF066.py:16:21
   |
15 | from foo.bar import MyClass  # RUF066
16 | from foo.bar import my_function  # RUF066
   |                     ^^^^^^^^^^^
17 | from foo.baz.qux import SomeClass  # RUF066
   |

RUF066 `SomeClass` imported from `foo.baz.qux` is not a module
  --> RUF066.py:17:25
   |
15 | from foo.bar import MyClass  # RUF066
16 | from foo.bar import my_function  # RUF066
17 | from foo.baz.qux import SomeClass  # RUF066
   |                         ^^^^^^^^^
18 |
19 | # ============================================================================
   |
