crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__non_module_import_stdlib_py39.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF066 [*] `join` imported from `os.path` is not a module
 --> RUF066_stdlib.py:4:21
  |
3 | # Standard library symbol imports (violations when check_stdlib=true)
4 | from os.path import join  # RUF066 (with check_stdlib)
  |                     ^^^^
5 | from collections import defaultdict  # RUF066 (with check_stdlib)
6 | from json import loads  # RUF066 (with check_stdlib)
  |
help: Convert to module import and update references
1 | """Test fixtures for RUF066 stdlib checking"""
2 | 
3 | # Standard library symbol imports (violations when check_stdlib=true)
  - from os.path import join  # RUF066 (with check_stdlib)
4 + from os import path
5 | from collections import defaultdict  # RUF066 (with check_stdlib)
6 | from json import loads  # RUF066 (with check_stdlib)
7 | 
note: This is an unsafe fix and may change runtime behavior

RUF066 [*] `defaultdict` imported from `collections` is not a module
 --> RUF066_stdlib.py:5:25
  |
3 | # Standard library symbol imports (violations when check_stdlib=true)
4 | from os.path import join  # RUF066 (with check_stdlib)
5 | from collections import defaultdict  # RUF066 (with check_stdlib)
  |                         ^^^^^^^^^^^
6 | from json import loads  # RUF066 (with check_stdlib)
  |
help: Convert to module import and update references
2 | 
3 | # Standard library symbol imports (violations when check_stdlib=true)
4 | from os.path import join  # RUF066 (with check_stdlib)
  - from collections import defaultdict  # RUF066 (with check_stdlib)
5 + import collections
6 | from json import loads  # RUF066 (with check_stdlib)
7 | 
8 | # Python 3.9+ modules (violations when check_stdlib=true and py39+)
note: This is an unsafe fix and may change runtime behavior

RUF066 [*] `loads` imported from `json` is not a module
 --> RUF066_stdlib.py:6:18
  |
4 | from os.path import join  # RUF066 (with check_stdlib)
5 | from collections import defaultdict  # RUF066 (with check_stdlib)
6 | from json import loads  # RUF066 (with check_stdlib)
  |                  ^^^^^
7 |
8 | # Python 3.9+ modules (violations when check_stdlib=true and py39+)
  |
help: Convert to module import and update references
3 | # Standard library symbol imports (violations when check_stdlib=true)
4 | from os.path import join  # RUF066 (with check_stdlib)
5 | from collections import defaultdict  # RUF066 (with check_stdlib)
  - from json import loads  # RUF066 (with check_stdlib)
6 + import json
7 | 
8 | # Python 3.9+ modules (violations when check_stdlib=true and py39+)
9 | from graphlib import TopologicalSorter  # RUF066 (with check_stdlib, py39+)
note: This is an unsafe fix and may change runtime behavior

RUF066 [*] `TopologicalSorter` imported from `graphlib` is not a module
  --> RUF066_stdlib.py:9:22
   |
 8 | # Python 3.9+ modules (violations when check_stdlib=true and py39+)
 9 | from graphlib import TopologicalSorter  # RUF066 (with check_stdlib, py39+)
   |                      ^^^^^^^^^^^^^^^^^
10 | from zoneinfo import ZoneInfo  # RUF066 (with check_stdlib, py39+)
   |
help: Convert to module import and update references
6  | from json import loads  # RUF066 (with check_stdlib)
7  | 
8  | # Python 3.9+ modules (violations when check_stdlib=true and py39+)
   - from graphlib import TopologicalSorter  # RUF066 (with check_stdlib, py39+)
9  + import graphlib
10 | from zoneinfo import ZoneInfo  # RUF066 (with check_stdlib, py39+)
11 | 
12 | # Python 3.11+ modules (violations when check_stdlib=true and py311+)
note: This is an unsafe fix and may change runtime behavior

RUF066 [*] `ZoneInfo` imported from `zoneinfo` is not a module
  --> RUF066_stdlib.py:10:22
   |
 8 | # Python 3.9+ modules (violations when check_stdlib=true and py39+)
 9 | from graphlib import TopologicalSorter  # RUF066 (with check_stdlib, py39+)
10 | from zoneinfo import ZoneInfo  # RUF066 (with check_stdlib, py39+)
   |                      ^^^^^^^^
11 |
12 | # Python 3.11+ modules (violations when check_stdlib=true and py311+)
   |
help: Convert to module import and update references
7  | 
8  | # Python 3.9+ modules (violations when check_stdlib=true and py39+)
9  | from graphlib import TopologicalSorter  # RUF066 (with check_stdlib, py39+)
   - from zoneinfo import ZoneInfo  # RUF066 (with check_stdlib, py39+)
10 + import zoneinfo
11 | 
12 | # Python 3.11+ modules (violations when check_stdlib=true and py311+)
13 | from tomllib import load  # RUF066 (with check_stdlib, py311+)
note: This is an unsafe fix and may change runtime behavior

RUF066 [*] `path` imported from `os` is not a module
  --> RUF066_stdlib.py:17:16
   |
15 | # These are also violations because os.path and collections.abc are submodules,
16 | # not in our filesystem, so we can't detect them as modules
17 | from os import path  # RUF066 (with check_stdlib) - stdlib submodule
   |                ^^^^
18 | from collections import abc  # RUF066 (with check_stdlib) - not in default allow-list as import target
   |
help: Convert to module import and update references
14 | 
15 | # These are also violations because os.path and collections.abc are submodules,
16 | # not in our filesystem, so we can't detect them as modules
   - from os import path  # RUF066 (with check_stdlib) - stdlib submodule
17 + import os
18 | from collections import abc  # RUF066 (with check_stdlib) - not in default allow-list as import target
note: This is an unsafe fix and may change runtime behavior

RUF066 [*] `abc` imported from `collections` is not a module
  --> RUF066_stdlib.py:18:25
   |
16 | # not in our filesystem, so we can't detect them as modules
17 | from os import path  # RUF066 (with check_stdlib) - stdlib submodule
18 | from collections import abc  # RUF066 (with check_stdlib) - not in default allow-list as import target
   |                         ^^^
   |
help: Convert to module import and update references
15 | # These are also violations because os.path and collections.abc are submodules,
16 | # not in our filesystem, so we can't detect them as modules
17 | from os import path  # RUF066 (with check_stdlib) - stdlib submodule
   - from collections import abc  # RUF066 (with check_stdlib) - not in default allow-list as import target
18 + import collections
note: This is an unsafe fix and may change runtime behavior
